--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,16 @@
 .bold {
   font-weight: bold;
 }
+
+.button {
+  color: white;
+background-color: green;
+font: inherit,
+border: 1px solid blue,
+padding: 8px,
+cursor: pointer,
+}
+.button:hover {
+  background-color: lightgreen,
+  color: black,
+}
