--- a/src/App.css
+++ b/src/App.css
@@ -12,13 +12,13 @@
 
 .button {
   color: white;
-background-color: green;
-font: inherit,
-border: 1px solid blue,
-padding: 8px,
-cursor: pointer,
+  background-color: green;
+  font: inherit;
+  border: 1px solid blue;
+  padding: 8px;
+  cursor: pointer;
 }
 .button:hover {
-  background-color: lightgreen,
-  color: black,
+  background-color: lightgreen;
+  color: black;
 }
