--- a/src/components/Cockpit/cockpit.module.css
+++ b/src/components/Cockpit/cockpit.module.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .red {
   color: red;
 }
@@ -10,7 +6,7 @@
   font-weight: bold;
 }
 
-.button {
+.Cockpit button {
   color: white;
   background-color: green;
   font: inherit;
@@ -18,7 +14,15 @@
   padding: 8px;
   cursor: pointer;
 }
-.button:hover {
+.Cockpit button:hover {
   background-color: lightgreen;
+  color: black;
+}
+.Cockpit button.Red {
+  background-color: red;
+}
+
+.Cockpit button.Red:hover {
+  background-color: salmon;
   color: black;
 }
